link to add watermark

--- a/human/templates/human/dashboard.html
+++ b/human/templates/human/dashboard.html
@@ -7,5 +7,5 @@
     <p>You can <a href="{% url "edit" %}">edit your profile</a> or <a href="{% url "password_change" %}">change your password</a> 
         or <a href="{% url "logout" %}">Logout</a></p>
     
-    
+    <p> <a href="{% url "images:add_watermark" %}">Add Watermark</a></p>
 {% endblock %}
