link to dashboard

--- a/human/templates/human/edit.html
+++ b/human/templates/human/edit.html
@@ -10,4 +10,5 @@
         {% csrf_token %}
         <p><input type="submit" value="Save changes"></p>
     </form>
+    <p><a href="{% url "dashboard" %}">Dashboard</a> </p>
 {% endblock %}
