add link to upload image

--- a/human/templates/human/dashboard.html
+++ b/human/templates/human/dashboard.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% load static watermark %}
+{% load static %}
+{% load watermark %}
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
@@ -11,6 +12,7 @@
 
     <h2>My watermarks </h2>
     <p> <a href="{% url "images:add_watermark" %}">Add Watermark</a></p>
+    <p> <a href="{% url "images:add_image" %}">Watermark an Image</a></p>
     <table class="table">
     <thead>
         <tr>
