add link to list images

--- a/human/templates/human/dashboard.html
+++ b/human/templates/human/dashboard.html
@@ -13,6 +13,7 @@
     <h2>My watermarks </h2>
     <p> <a href="{% url "images:add_watermark" %}">Add Watermark</a></p>
     <p> <a href="{% url "images:add_image" %}">Watermark an Image</a></p>
+    <p> <a href="{% url "images:list_images" %}">My Images</a></p>
     <table class="table">
     <thead>
         <tr>
