--- a/human/templates/base.html
+++ b/human/templates/base.html
@@ -15,9 +15,31 @@
                 <li>{{ message|safe }} <a href="#" class="close">x</a></li>
                 {% endfor %}
             </ul>
-        {% endif %}    
-    {% block content %}  
-    {% endblock %}
+        {% endif %}  
+    <div class="container">      
+          
+       
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url "dashboard" %}">Dashboard</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="{% url "edit" %}">Edit Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url "password_change" %}">Change Password</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url "logout" %}">Logout</a></li>
+
+
+            </ul>
+
+            </div>
+        </div>
+        </nav>      
+        {% block content %}   
+        {% endblock %}
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
