--- a/human/templates/registration/login.html
+++ b/human/templates/registration/login.html
@@ -17,15 +17,9 @@ account <a href="{% url "register" %}">register here</a></p>
             {{ form.as_p }}
             {% csrf_token %}
             <input type="hidden" name="next" value="{{ next }}" />
-            <p><input type="submit" value="Log-in"></p>
+            <p><input class="btn btn-primary" type="submit" value="Log-in"></p>
         </form>
         <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
     </div>
 
-    <li class="google">
-        <a href="{% url "social:begin" "google-oauth2" %}">Login with Google</a>
-    </li>
-    <li class="twitter">
-<a href="{% url "social:begin" "twitter" %}">Login with Twitter</a>
-</li>
 {% endblock %}
